Fix search button accessibility issues and inaccuracies

--- a/app/javascript/mastodon/locales/defaultMessages.json
+++ b/app/javascript/mastodon/locales/defaultMessages.json
@@ -1662,7 +1662,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "Search",
+        "defaultMessage": "Clear search",
         "id": "search.placeholder"
       },
       {
